deletetig trash and updating gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -253,5 +253,11 @@ Thumbs.db
 # profiling data
 .prof
 
+#ebooks and jpges
+.epub
+.html
+.jpg
+.jpeg
+
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm
